# app/Models/CustomerProfile.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+class CustomerProfile extends Model
+{
+    public $timestamps = false;
+
+    protected $fillable = [
+        'user_id',
+        'first_name',
+        'last_name',
+        'locality_id',
+        'phone_1',
+        'phone_2',
+    ];
+
+    public function user(): BelongsTo
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function locality(): BelongsTo
+    {
+        return $this->belongsTo(Locality::class);
+    }
+}
